--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylebuttonToggleSwitchDarkLight.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Toggle Switch Dark & Light</title>
     
 </head>
@@ -12,6 +12,6 @@
     <div id="toggle">
         <i class="switch"></i>
     </div>
-        <script src="stylebuttonToggleSwitchDarkLight.js"></script>
+        <script src="script.js"></script>
 </body>
 </html>
